--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <div class="drop-zone">Drop here to remove task 🗑️</div>
   </div>
 </div>
-<script src=""></script>
+<script src="script.js"></script>
 </body>
 </html>
