--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
-<link rel="stylesheet" href="C:\frontend practice\javascript\styles.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
